Add icon and adjust build-portable.ps1